--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<div class="hero">
+    <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470" alt="Mountain Lake">
+    
+    <div class="hero-content">
+      <h1>Welcome to my Pinterest clone</h1>
+      <p>Discover new inspiration and save your favorite ideas</p>
+      <a href="#">Explore now</a>
+    </div>
+  </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
